<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lüper</string>
    <string name="welcome">Welcome to the Lüper Beta!</string>
    <string name="welcomebody">
        This home screen will probably be removed. \n But for now, it\'s a great place to put random unfinished features in buttons like these:
    </string>
    <string name="menu_new_project">New Project</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log Out</string>
    <string name="title_activity_audio_recorder_test">Audio Recorder Test</string>
    <string name="title_activity_example_project"></string>
    <string name="action_settings">Settings</string>
    <string name="button_browse">Browse</string>
    <string name="button_record">Audio Recorder Test</string>
    <string name="button_dbtest">Remote DB Test Query</string>
    <string name="button_project">Dummy Project</string>
    <string name="button_looptest">Loop Test</string>
    <string name="project_welcome">
        This activity will never become our "Active Project," complete with tracks, buttons galore, and loops, naturally.
    </string>
    <string name="projects_list_empty">No projects here yet.</string>

    <string name="editor_edit_clip">Edit Clip</string>
    <string name="editor_add_clip">Add Clip</string>
    <string name="editor_add_track">Add Track</string>
    <string name="editor_delete_clip">Delete Clip</string>
    <string name="editor_play">Play</string>
    <string name="editor_pause">Pause</string>
    <string name="editor_stop">Stop</string>
    <string name="editor_volume">Volume</string>
    <string name="editor_help">Help</string>
    <string name="get_started">Log into Facebook to use Luper</string>
    <string name="app_id">568749619823694</string>
    <string name="devtoolsexplanation">NOTE: All the buttons which were here before have been moved to the new LuperDevToolsActivity, so that this space can instead be used for facebook features.  The button above will be removed soon, but the Developer Tools can also be accessed from the menu in the actionbar.\n--Mike</string>

    <!-- Strings related to login -->
    <string name="login_title">Welcome to Lüper!</string>
    <string name="header_login_welcome">Hi There! Have We Met?</string>
    <string name="subheader_login">You\'ll need to log in so Lüper can keep all your recordings and projects in sync with the cloud.</string>
    <string name="login_header_facebook">Log in with Facebook:</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Log In</string>
    <string name="action_register">Register</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="progress_logging_in">Logging in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_header_or">or, use your Lüper account:</string>
    <string name="login_extra_details">You can create a new Lüper account using the Register tab at the top of this screen. Note that if you don\'t log in with Facebook, you won\'t be able to use Lüper\'s social features until you activate Facebook in Account Settings.</string>
    <!-- Strings related to register -->
    <string name="header_register_welcome">New to Lüper? Start Here!</string>
    <string name="register_description">The preferred way to use Lüper is via Facebook Login, so you can easily share your creations with friends.  However, if you prefer to remain slightly more anonymous, you can register here: </string>
    <string name="prompt_password2">Re-enter Password</string>
    <string name="prompt_username">Display Name</string>
    <string name="progress_registering">Registering&#8230;</string>
    <string name="or_register_facebook">or, Register with Facebook:</string>
    <string name="title_activity_Luper_Login">Luper Login</string>
    <string name="title_activity_Luper_register">Luper Register</string>

</resources>