<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_new_project"
        android:title="@string/menu_new_project"
        android:showAsAction="always"
        android:actionLayout="@layout/big_new_project_button" />
    <item android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        android:showAsAction="always" />
    <item android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/menu_settings"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/devtools"
        android:title="Developer Tools"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/help"
          android:title="Help"
          android:showAsAction="ifRoom" />>
</menu>
